RESOLVED FIXED285996
matchHelperAssignInputsFromInit does not need to process again its URLPatternInit
https://bugs.webkit.org/show_bug.cgi?id=285996
Summary matchHelperAssignInputsFromInit does not need to process again its URLPattern...
youenn fablet
Reported 2025-01-15 07:19:52 PST
matchHelperAssignInputsFromInit does not need to process again its URLPatternInit
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-15 07:21:07 PST
EWS
Comment 2 2025-01-15 09:14:52 PST
Committed 288941@main (880264ba2e4b): <https://commits.webkit.org/288941@main> Reviewed commits have been landed. Closing PR #39082 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.