matchHelperAssignInputsFromInit does not need to process again its URLPatternInit rdar://142967409 https://bugs.webkit.org/show_bug.cgi?id=285996

Reviewed by Anne van Kesteren.

Removing redundant and no longer needed code.

* Source/WebCore/Modules/url-pattern/URLPattern.cpp:
(WebCore::matchHelperAssignInputsFromInit):
(WebCore::URLPattern::match const):
(WebCore::processProtocolForInit): Deleted.
(WebCore::processUsernameForInit): Deleted.
(WebCore::processPasswordForInit): Deleted.
(WebCore::processHostnameForInit): Deleted.
(WebCore::processPortForInit): Deleted.
(WebCore::processSearchForInit): Deleted.
(WebCore::processHashForInit): Deleted.

Canonical link: https://commits.webkit.org/288941@main