Source/WebCore/Modules/url-pattern/URLPattern.cpp
@@ -368,91 +368,16 @@ static inline void matchHelperAssignInputsFromURL(const URL& input, String& prot
     hash = input.fragmentIdentifier().toString();
 }
 
-// https://urlpattern.spec.whatwg.org/#process-protocol-for-init
-static ExceptionOr<String> processProtocolForInit(const String& protocol)
+static inline void matchHelperAssignInputsFromInit(const URLPatternInit& input, String& protocol, String& username, String& password, String& hostname, String& port, String& pathname, String& search, String& hash)
 {
-    // canonicalizeProtocol does both steps.
-    return canonicalizeProtocol(protocol, BaseURLStringType::URL);
-}
-
-// https://urlpattern.spec.whatwg.org/#process-username-for-init
-static ExceptionOr<String> processUsernameForInit(const String& username)
-{
-    return canonicalizeUsername(username, BaseURLStringType::URL);
-}
-
-// https://urlpattern.spec.whatwg.org/#process-password-for-init
-static ExceptionOr<String> processPasswordForInit(const String& password)
-{
-    return canonicalizePassword(password, BaseURLStringType::URL);
-}
-
-// https://urlpattern.spec.whatwg.org/#process-hostname-for-init
-static ExceptionOr<String> processHostnameForInit(const String& hostname)
-{
-    return canonicalizeHostname(hostname, BaseURLStringType::URL);
-}
-
-// https://urlpattern.spec.whatwg.org/#process-port-for-init
-static ExceptionOr<String> processPortForInit(const String& port, const String& protocol)
-{
-    std::optional<StringView> protocolValue;
-    if (!protocol.isNull())
-        protocolValue = StringView { protocol };
-    return canonicalizePort(port, protocolValue, BaseURLStringType::URL);
-}
-
-// https://urlpattern.spec.whatwg.org/#process-search-for-init
-static ExceptionOr<String> processSearchForInit(const String& search)
-{
-    // canonicalizeSearch does both steps.
-    return canonicalizeSearch(search, BaseURLStringType::URL);
-}
-
-// https://urlpattern.spec.whatwg.org/#process-hash-for-init
-static ExceptionOr<String> processHashForInit(const String& hash)
-{
-    // canonicalizeHash does both steps.
-    return canonicalizeHash(hash, BaseURLStringType::URL);
-}
-
-static inline ExceptionOr<void> matchHelperAssignInputsFromInit(const URLPatternInit& input, String& protocol, String& username, String& password, String& hostname, String& port, String& pathname, String& search, String& hash)
-{
-    auto canonicalizedProtocol = processProtocolForInit(input.protocol);
-    if (canonicalizedProtocol.hasException())
-        return canonicalizedProtocol.releaseException();
-    auto canonicalizedUsername = processUsernameForInit(input.username);
-    if (canonicalizedUsername.hasException())
-        return canonicalizedUsername.releaseException();
-    auto canonicalizedPassword = processPasswordForInit(input.password);
-    if (canonicalizedPassword.hasException())
-        return canonicalizedPassword.releaseException();
-    auto canonicalizedHostname = processHostnameForInit(input.hostname);
-    if (canonicalizedHostname.hasException())
-        return canonicalizedHostname.releaseException();
-    auto canonicalizedPort = processPortForInit(input.port, canonicalizedProtocol.returnValue());
-    if (canonicalizedPort.hasException())
-        return canonicalizedPort.releaseException();
-    auto canonicalizedPathname = processPathname(input.pathname, canonicalizedProtocol.returnValue(), BaseURLStringType::URL);
-    if (canonicalizedPathname.hasException())
-        return canonicalizedPathname.releaseException();
-    auto canonicalizedSearch = processSearchForInit(input.search);
-    if (canonicalizedSearch.hasException())
-        return canonicalizedSearch.releaseException();
-    auto canonicalizedHash = processHashForInit(input.hash);
-    if (canonicalizedHash.hasException())
-        return canonicalizedHash.releaseException();
-
-    protocol = canonicalizedProtocol.releaseReturnValue();
-    username = canonicalizedUsername.releaseReturnValue();
-    password = canonicalizedPassword.releaseReturnValue();
-    hostname = canonicalizedHostname.releaseReturnValue();
-    port = canonicalizedPort.releaseReturnValue();
-    pathname = canonicalizedPathname.releaseReturnValue();
-    search = canonicalizedSearch.releaseReturnValue();
-    hash = canonicalizedHash.releaseReturnValue();
-
-    return { };
+    protocol = input.protocol;
+    username = input.username;
+    password = input.password;
+    hostname = input.hostname;
+    port = input.port;
+    pathname = input.pathname;
+    search = input.search;
+    hash = input.hash;
 }
 
 // https://urlpattern.spec.whatwg.org/#url-pattern-match
@@ -478,10 +403,7 @@ ExceptionOr<std::optional<URLPatternResult>> URLPattern::match(ScriptExecutionCo
             if (maybeResult.hasException())
                 return true;
 
-            URLPatternInit processedInit = maybeResult.releaseReturnValue();
-            auto parsingResult = matchHelperAssignInputsFromInit(processedInit, protocol, username, password, hostname, port, pathname, search, hash);
-            if (parsingResult.hasException())
-                return parsingResult.releaseException();
+            matchHelperAssignInputsFromInit(maybeResult.releaseReturnValue(), protocol, username, password, hostname, port, pathname, search, hash);
             return false;
         }, [&](const String& value) -> ExceptionOr<bool> {
             URL baseURL;
